[Discover] Fix overflow of the expanded document (#5788)
* Fix vertical alignment of expand details button
Fix colspan of details cells


* Fix overflow problem of detailed doc


---------

--- a/src/plugins/discover/public/application/components/default_discover_table/_table_cell.scss
+++ b/src/plugins/discover/public/application/components/default_discover_table/_table_cell.scss
@@ -2,8 +2,13 @@
   border-top: none !important;
 }
 
-.osdDocTableCell__toggleDetails {
-  padding: 7px 0 0 4px;
+// stylelint-disable-next-line @osd/stylelint/no_modifying_global_selectors
+.euiFlexItem.osdDocTable__detailsIconContainer {
+  margin-right: 0;
+}
+
+.osd-table td.osdDocTableCell__toggleDetails {
+  padding: 5px 0 0 4px;
 }
 
 /**
